# BCS-Ophyd-ZMQ

./: .gitignore  .readthedocs.yaml  LEGAL.md  LICENSE.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  tests.yml
docs/source/: api.md  conf.py  examples.md  getting-started.md  index.md
docs/source/_static/: custom.css
examples/: basic_connection.py  bluesky_scans.py  device_discovery.py
info/: ReadMe.txt
src/: bcs_area_detector.py  bcs_device_manager.py  bcs_motor.py  bcs_signal.py  main.py
src/bcsophyd/: __init__.py  cli.py
src/bcsophyd/zmq/: __init__.py  bcs_area_detector.py  bcs_device_manager.py  bcs_motor.py  bcs_server.py  bcs_signal.py
tests/: __init__.py  conftest.py  test_bcs_device_manager.py  test_bcs_motor.py  test_bcs_server.py  test_bcs_signal.py
