[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bcsophyd"
version = "0.1.0"
description = "A package for interacting with the Beamline Control System (BCS) using ZeroMQ."
authors = [
  { name="Joao Gabriel Felipe Machado Gazolla", email="gabrielgazolla@lbl.gov" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "ophyd",
  "pyzmq",
  "happi"
]

[project.optional-dependencies]
dev = ["bluesky", "matplotlib"]
docs = [
  "matplotlib",
  "sphinx",
  "sphinx-markdown-tables",
  "numpydoc",
  "sphinx_copybutton",
  "myst_parser",
  "sphinx_rtd_theme",
  "sphinx_rtd_dark_mode"
]
tests = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "coverage",
  "coveralls",
  "codecov",
  "pylint"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://git.als.lbl.gov/bcs/bluesky/bcsophyd-zmq"
"Bug Tracker" = "https://git.als.lbl.gov/bcs/bluesky/bcsophyd-zmq/-/issues"
"Documentation" = "https://git.als.lbl.gov/bcs/bluesky/bcsophyd-zmq"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: marks tests that require a running BCS server",
]
testpaths = ["tests"]
