[metadata]
name = bcsophyd-zmq
version = attr: src.__version__
description = A package for interacting with the Beamline Control System (BCS) using ZeroMQ.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://git.als.lbl.gov/bcs/bluesky/bcsophyd-zmq
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    ophyd
    pyzmq
    asyncio

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bcsophyd-zmq = src.main:scan_FakeMotor_FakeDetWithFakeEpicsSignal
